--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,8 @@ jobs:
           cd ..
           mkdir -p ip2l
           cd ./ip2l
-          wget https://www.ip2location.com/download/?token=$IP2LOCATION&file=DB1LITECSV -O c.zip
-          wget https://www.ip2location.com/download/?token=$IP2LOCATION&file=DB1LITECSVIPV6 -O c6.zip
+          wget https://www.ip2location.com/download/?token=69gEKik6BjwJMkasOl1BSDVebbUeexmAaszv1cZQT1R9tnfBociTQMdvJApwOump&file=DB1LITECSV -O c.zip
+          wget https://www.ip2location.com/download/?token=69gEKik6BjwJMkasOl1BSDVebbUeexmAaszv1cZQT1R9tnfBociTQMdvJApwOump&file=DB1LITECSVIPV6 -O c6.zip
           unzip -o c.zip
           unzip -o c6.zip
           zip -q ip2l.zip *.CSV
