--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
     
 env:
   TZ: Asia/Shanghai
+  IP2L_DOWN: download.pl
 
 jobs:
   build:
@@ -28,7 +29,6 @@ jobs:
       - name: Push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          IP2LOCATION: ${{ secrets.IP2LOCATION }}
         run: |
           cd ./data        
           set qqwry_up = 0
@@ -42,8 +42,10 @@ jobs:
           cd ..
           mkdir -p ip2l
           cd ./ip2l
-          wget https://www.ip2location.com/download/?token=69gEKik6BjwJMkasOl1BSDVebbUeexmAaszv1cZQT1R9tnfBociTQMdvJApwOump&file=DB1LITECSV -O c.zip
-          wget https://www.ip2location.com/download/?token=69gEKik6BjwJMkasOl1BSDVebbUeexmAaszv1cZQT1R9tnfBociTQMdvJApwOump&file=DB1LITECSVIPV6 -O c6.zip
+          cp $IP2L_DOWN ./
+          chmod +x $IP2L_DOWN
+          ./$IP2L_DOWN -package DB1 -token ${{ secrets.IP2LOCATION }} -output c.zip
+          ./$IP2L_DOWN -package DB1IPV6 -token ${{ secrets.IP2LOCATION }} -output c.zip
           unzip -o c.zip
           unzip -o c6.zip
           zip -q ip2l.zip *.CSV
