--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,8 +42,8 @@ jobs:
           cd ..
           mkdir -p ip2l
           chmod +x $IP2L_DL
-          ./$IP2L_DL -package DB1LITECSV -token ${{ secrets.IP2LOCATION }} -output ./ip2l/c.zip
-          ./$IP2L_DL -package DB1LITECSVIPV6 -token ${{ secrets.IP2LOCATION }} -output ./ip2l/c6.zip
+          ./$IP2L_DL -package DB1LITE -token ${{ secrets.IP2LOCATION }} -output ./ip2l/c.zip
+          ./$IP2L_DL -package DB1LITEIPV6 -token ${{ secrets.IP2LOCATION }} -output ./ip2l/c6.zip
           cd ./ip2l
           unzip -o c.zip
           unzip -o c6.zip
