--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,6 +30,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          apt-get -qq install perl-libwww-perl
+          apt-get -qq install perl-CPAN
+          apt-get -qq install perl-LWP-Protocol-https perl-Crypt-SSLeay
+
           cd ./data        
           set qqwry_up = 0
           if [ -z "$(git status --porcelain)" ]; then
