--- a/parse/qqwry/package.json
+++ b/parse/qqwry/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "qqwry_packer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,19 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@ipdb/packer": "^1.0.0",
-    "async-mutex": "^0.4.0",
-    "bytenode": "^1.4.1",
-    "crypto-js": "^4.1.1",
-    "geoip-lite": "^1.4.7",
-    "google-libphonenumber": "^3.2.32",
-    "ipdb": "^0.3.3",
-    "jsencrypt": "^3.3.2",
-    "jsrsasign": "^10.8.6",
     "lib-qqwry": "^1.3.2",
-    "libphonenumber-js": "^1.10.31",
-    "moment": "^2.29.4",
-    "node-rsa": "^1.1.1",
-    "nodejs-jsencrypt": "^3.0.0-rc.1"
   }
 }
