--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,8 +53,6 @@ jobs:
       - name: 从微信公众号下载QQWRY
         run: |
           cd build
-          pwd
-          ls -l
           link=$(python qqwry.py)
           mkdir -p Downloads
           wget --no-check-certificate --user-agent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36" $link -P ./Downloads
@@ -83,6 +81,8 @@ jobs:
           echo "dat_filename=$filename" >> $GITHUB_ENV
           7z e -y $zip setup.exe
           ./innoextract setup.exe -I qqwry.dat
+          ls -l
+          cp ./app/qqwry.dat ./qqwry.dat
 
       - name: 解析qqwry.data成所需的文件
         run: |
