--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,43 +50,43 @@ jobs:
           pip install requests
           pip install bs4
       
-      - name: 从微信公众号下载QQWRY
-        run: |
-          cd build
-          link=$(python qqwry.py)
-          mkdir -p Downloads
-          wget --no-check-certificate --user-agent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36" $link -P ./Downloads
+      # - name: 从微信公众号下载QQWRY
+      #   run: |
+      #     cd build
+      #     link=$(python qqwry.py)
+      #     mkdir -p Downloads
+      #     wget --no-check-certificate --user-agent="Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.0.0 Safari/537.36" $link -P ./Downloads
 
-      - name: 缓存innoextract
-        uses: actions/cache@v3
-        id: cache-innoextract
-        with:
-          path: innoextract
-          key: ${{ runner.os }}-innoextract-${{ env.innoextract_version }}
+      # - name: 缓存innoextract
+      #   uses: actions/cache@v3
+      #   id: cache-innoextract
+      #   with:
+      #     path: innoextract
+      #     key: ${{ runner.os }}-innoextract-${{ env.innoextract_version }}
       
-      - name: 下载innoextract
-        if: steps.cache-innoextract.outputs.cache-hit != 'true'
-        run: |
-          cd build
-          wget https://github.com/dscharrer/innoextract/releases/download/${{ env.innoextract_version }}/innoextract-${{ env.innoextract_version }}-linux.tar.xz
-          tar -xvf innoextract-${{ env.innoextract_version }}-linux.tar.xz innoextract-${{ env.innoextract_version }}-linux/bin/${{ env.arch }}/innoextract --strip-components 3
+      # - name: 下载innoextract
+      #   if: steps.cache-innoextract.outputs.cache-hit != 'true'
+      #   run: |
+      #     cd build
+      #     wget https://github.com/dscharrer/innoextract/releases/download/${{ env.innoextract_version }}/innoextract-${{ env.innoextract_version }}-linux.tar.xz
+      #     tar -xvf innoextract-${{ env.innoextract_version }}-linux.tar.xz innoextract-${{ env.innoextract_version }}-linux/bin/${{ env.arch }}/innoextract --strip-components 3
 
-      - name: 获取qqwry.dat
-        id: dat_date
-        shell: pwsh
-        run: |
-          cd build
-          $zip = (Get-ChildItem Downloads\*.zip)[0].FullName
-          $filename = (Get-ChildItem Downloads\*.zip)[0].Name
-          $name = $filename.Substring($filename.IndexOf('-') + 1 , $filename.length - $filename.IndexOf('-') - 5)
-          echo "dat_date=$name" | Out-File -FilePath $env:GITHUB_ENV
-          7z e -y $zip setup.exe
-          ./innoextract setup.exe -I qqwry.dat
-          #if [ -f "./app/qqwry.dat" ]; then
-          cp ./app/qqwry.dat ./qqwry.dat
-          #fi
+      # - name: 获取qqwry.dat
+      #   id: dat_date
+      #   shell: pwsh
+      #   run: |
+      #     cd build
+      #     $zip = (Get-ChildItem Downloads\*.zip)[0].FullName
+      #     $filename = (Get-ChildItem Downloads\*.zip)[0].Name
+      #     $name = $filename.Substring($filename.IndexOf('-') + 1 , $filename.length - $filename.IndexOf('-') - 5)
+      #     echo "dat_date=$name" | Out-File -FilePath $env:GITHUB_ENV
+      #     7z e -y $zip setup.exe
+      #     ./innoextract setup.exe -I qqwry.dat
+      #     #if [ -f "./app/qqwry.dat" ]; then
+      #     cp ./app/qqwry.dat ./qqwry.dat
+      #     #fi
 
-      - name: 解析qqwry.data成所需的文件
+      - name: 解析qqwry.dat成所需的文件
         run: |
           cd build
           chmod +x build.sh
